# parallel_uav

./: CMakeLists.txt  README.md  package.xml
launch/: demo.launch  fly.launch  spawn_and_fly.launch  start_gazebo.launch  test.launch
src/: follow_uav.cpp  set_cmd_vel.cpp  spawn_new.cpp  spawn_uav.cpp  spawn_uav.h  sub_tf_gen_tf.cpp  sub_tf_gen_vel.cpp
worlds/: outdoor_landscape.world  test.world
